refactored FinanceOperationService methods